Fix Modifica archivo  Persona.php, incluye datos ejemplo Modifica PersonaController, incluye prefijo vi en path Modifica archivo api.php, corrige nombre AdminController a AdministradorController
